oddly the recipes controller is not able to inherit

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -5,6 +5,18 @@
     <title>Gastronome</title>
   </head>
   <body>
-    <h1>Welcome to Gastronome!</h1>
+    <br>
+    <br>
+    <br>
+    <h1 style="color: #EDF5E1;">Gastronome</h1>
+        <h2 style ="font-size:2.1em; color: #05386B; text-shadow: 2px 2.3px #EDF5E1;">"The secret of success in life is to eat what you like and let the food fight it out inside." <br> – Mark Twain </h2>
+        <div id ="background">
+          <div id ="text-overlay">
+            <div style="text-align: center;">
+            <a href="/signup" class="button btn btn-primary btn-primary-outline btn-pill">Sign Up</a>
+            <a href="/login" class="button btn btn-primary btn-primary-outline btn-pill">Log In</a>
+          </div>
+      </div>
+    </div>
   </body>
 </html>
