--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+<html lang="en">
+  <head>
+    <title>Gastronome</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Titillium+Web" rel="stylesheet">
 
-  <title>Gastronome</title>
+    <style>
+    h1, h2, h3, body {
+      text-align: center;
+    }
+    h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 6em;
+    }
+    h2 {
+      font-family: 'Titillium Web', sans-serif;
+    	font-size: 2em;
+    	font-style: normal;
+    	font-variant: normal;    }
+    body {
+      background-color: #5CDB95;
+    }
+    ul, li, p {
+      font-family: 'Titillium Web', sans-serif;
+    }
+    .button {
+      background-color: #EDF5E1;
+      color: #05386B;
+      font-family: 'Titillium Web', sans-serif;
+    }
+    </style>
+  </head>
+  <body>
+    <!-- BEGIN YOUR PAGE HERE!!!! -->
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <%= yield %>
 
-  <link rel="stylesheet" href="/stylesheets/main.css" />
-</head>
-<body>
-  <div class="wrapper">
-
-      <%= yield %>
-
-    <footer class="branding">
-      <small>&copy; 2018 <strong>Gastronome</strong></small>
-    </footer>
-  </div>
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <!--[if lt IE 7]>
-    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
-    <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
-  <![endif]-->
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  </body>
+</html>
